--- a/Resources/style.css
+++ b/Resources/style.css
@@ -31,7 +31,7 @@ html {
 
 h1,h2,h3,h4 {
     font-family: "canterell", sans-serif;
-    margin: 0;
+    margin: 10px auto;
 }
   
                     /* Nav */
@@ -93,7 +93,7 @@ section {
 
     height: fit-content;
     width: fit-content;
-    margin: 50px 25px;
+    margin: 50px auto;
     text-align: center;
 
 }
@@ -103,9 +103,14 @@ section {
     width: 2rem;
     height: 2rem;
     padding: 0 ;
-    margin: 0 ;
+    margin: auto ;
     border-radius: 35%;
+   
+   
 }
+
+
+
 
 /* Nav CSS end */
 
