--- a/Resources/style.css
+++ b/Resources/style.css
@@ -109,23 +109,44 @@ section {
    
 }
 
-
-
-
 /* Nav CSS end */
+
+
+
 
 /* INDEX HEADER */
 
+
+
 /* INDEX BODY */
-.aboutProjectSection {
-    display: inline-flex;
-    justify-content: space-evenly;
-    height: fit-content;
+.main-content {
+    justify-content: center;
+    padding: 1%;
 }
 
+
+.aboutProjectSection {
+    display:grid;
+   grid-template: 10% 20% 30% 10% 20% 10% /repeat(5,20%); 
+    width: 100%;
+    position: relative;
+    margin:2rem ;
+   padding-left: 3rem;
+    /* background-color: #008f22; */
+     }
+
+.skillsSection {
+  grid-area: 3/1/5/3;
+  padding-top: 100px;
+  }
+  
+.projectSection{
+          grid-area:1/3/3/5 ;
+          padding-left: 3rem;
+}
 .aboutSection {
-    width: 40%;
-    height: fit-content;
+   grid-area: 1/1/3/3;
+    
 }
 
 .aboutSection a {
@@ -136,14 +157,19 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-
+    margin-top: 3rem;
+    grid-auto-flow: column;
   }
 
+  #navlogo {
+      cursor:pointer;
+      display:inline-block
+  }
  
  
 
      .project { 
-  box-sizing: border -box;
+  box-sizing: border-box;
   width: 240px;
   height: 200px;
   display: flex;
@@ -198,6 +224,12 @@ header h1 {
 }
 
 /* Header End */
+
+/* Index Body Styles */
+
+.skillIcon {
+    height: 5rem;
+}
 
 /* Contact Body */
 
